--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <body dir="rtl">
     <div class="header">
       <img class="logo" src="img/" alt="THZ" />
-      <p>أيقونة الكتاب صفحة القرآن الكريم</p>
+      <p>Happy birthday 🎁 </p>
     </div>
     <div class="icon-bar">
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
-      <a href="card/card.html"><i class="fa fa-users"></i></a>
+      <a href=""><i class="fa fa-users"></i></a>
       <a href="search/search.html"><i class="fa fa-search"></i></a>
       <a href="Q.html"><i class="fa fa-book"></i></a>
     </div>
@@ -56,12 +56,14 @@
         <iframe
           width="0"
           height="0"
-          src="https://www.youtube.com/embed/QkdV2VV4PfY?modestbranding=1&autoplay=1&controls=0&fs=0&iv_load_policy=3&loop=1&rel=0&showinfo=0&autohide=0&disablekb=1"
+          src="https://www.youtube.com/embed/GBvWCvoneds?modestbranding=1&autoplay=1&controls=0&fs=0&iv_load_policy=3&loop=1&rel=0&showinfo=0&autohide=0&disablekb=1"
           frameborder="0"
         ></iframe>
 
         <p id="text">
-          صدقه جارية لجميع أموات المسلمين
+         " من عبدالعزيز ♥️ لـ فاطمه " 
+
+كل عام وانتي اجمل من عرفت وكل عام وانتي مبسوطه والبسمه م تفارقك ، وكل عام وانتي بخير يااجمل صدفه عرفها قلبي ، وكل عام وانتي بوسط قلبي تعيشين ، وكل عام وانتي معي بكل اعيادي ، عسى عمري كله معك وعسى كل اعيادك جميله مثل عيونك ، وعسى عيونك ماتعرف الحزن ♥️📮 ..
         </p>
        
       </div>
