--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <body dir="rtl">
     <div class="header">
       <img class="logo" src="img/" alt="THZ" />
-      <p>Happy birthday 🎁 </p>
+      <p>Happy New Years </p>
     </div>
     <div class="icon-bar">
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
@@ -61,9 +61,8 @@
         ></iframe>
 
         <p id="text">
-         " من عبدالعزيز ♥️ لـ فاطمه " 
-
-كل عام وانتي اجمل من عرفت وكل عام وانتي مبسوطه والبسمه م تفارقك ، وكل عام وانتي بخير يااجمل صدفه عرفها قلبي ، وكل عام وانتي بوسط قلبي تعيشين ، وكل عام وانتي معي بكل اعيادي ، عسى عمري كله معك وعسى كل اعيادك جميله مثل عيونك ، وعسى عيونك ماتعرف الحزن ♥️📮 ..
+         " For all   ♥️  " 
+           H A p p y - N e W - Y e A R 
         </p>
        
       </div>
