--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <body dir="rtl">
     <div class="header">
-      <img class="logo" src="img/" alt="THZ" />
+      <img class="logo" src="img/thz1.png" alt="THZ" />
       <p>Happy New Years </p>
     </div>
     <div class="icon-bar">
