--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="icon-bar">
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
-      <a href=""><i class="fa fa-users"></i></a>
+      <a href="card/card.html"><i class="fa fa-users"></i></a>
       <a href="search/search.html"><i class="fa fa-search"></i></a>
       <a href="Q.html"><i class="fa fa-book"></i></a>
     </div>
