--- a/404/index.html
+++ b/404/index.html
@@ -10,8 +10,8 @@
     <div class="overlay"></div>
     <div class="terminal">
       <h1>Error <span class="errorcode">404</span></h1>
-      <p class="output">The page you are looking for might have been removed, had its name changed or is temporarily unavailable.</p>
-      <p class="output">Please try to <a href="#1">go back</a> or <a href="#2">return to the homepage</a>.</p>
+      <p class="output">Not Found The Page . / </p>
+      <p class="output">Please try to <a href="/index.html">go back</a> or <a href="/index.html">return to the homepage</a>.</p>
       <p class="output">Good luck.</p>
     </div>
 </body>
