--- a/card/card.html
+++ b/card/card.html
@@ -47,11 +47,11 @@
 
       <div class="column">
         <div class="card">
-          <img src="/img/Hbwsh.jpeg" alt="Hbwsh" style="width: 100%;" />
+          <img src="#" alt="SooN" style="width: 100%;" />
           <div class="container">
             <h2>Hbwsh</h2>
             <p class="title">Developer new</p>
-            <p>Hi I'm | Hbwsh | Devloper New (:</p>
+            <p>Hi I'm | *** | Devloper New (:</p>
             <p>None</p>
             <p><button class="button">Contact</button></p>
           </div>
@@ -60,11 +60,11 @@
 
       <div class="column">
         <div class="card">
-          <img src="/img/Zai6aB.jpeg" alt="Zai6aB" style="width: 100%;" />
+          <img src="#" alt="SooN" style="width: 100%;" />
           <div class="container">
             <h2>Zai6aB</h2>
             <p class="title">Developer new</p>
-            <p>Hi I'm | Zai6aB | Devloper New (:</p>
+            <p>Hi I'm | *** | Devloper New (:</p>
             <p>None</p>
             <p><button class="button">Contact</button></p>
           </div>
