--- a/card/card.html
+++ b/card/card.html
@@ -28,7 +28,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="/img/Turbo.jpeg" alt="TuRbo" style="width: 100%;" />
+          <img src="Turbo.jpeg" alt="TuRbo" style="width: 100%;" />
           <div class="container">
             <h2>TuRbo</h2>
             <p class="title">Founder</p>
@@ -49,7 +49,7 @@
         <div class="card">
           <img src="#" alt="SooN" style="width: 100%;" />
           <div class="container">
-            <h2>Hbwsh</h2>
+            <h2>SooN</h2>
             <p class="title">Developer new</p>
             <p>Hi I'm | *** | Devloper New (:</p>
             <p>None</p>
@@ -62,7 +62,7 @@
         <div class="card">
           <img src="#" alt="SooN" style="width: 100%;" />
           <div class="container">
-            <h2>Zai6aB</h2>
+            <h2>SooN</h2>
             <p class="title">Developer new</p>
             <p>Hi I'm | *** | Devloper New (:</p>
             <p>None</p>
