--- a/shield/Ba59h.html
+++ b/shield/Ba59h.html
@@ -16,6 +16,6 @@
       <div id="generate" class="button">تثبيت حزمة الحماية لــ الباخصه</div>
      
      
-      <script src="/shield/Far.js"></script>
+      <script src="Far.js"></script>
 </body>
 </html>
