--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
       <a href="card/card.html"><i class="fa fa-users"></i></a>
       <a href="search/search.html"><i class="fa fa-search"></i></a>
-      <a href="shield/Ba59h.html"><i class="fa fa-shield"></i></a>
+      <a href="shield/index.html"><i class="fa fa-shield"></i></a>
     </div>
 
     <div class="text-cricle">
