--- a/shield/index.html
+++ b/shield/index.html
@@ -16,6 +16,6 @@
       <div id="generate" class="button">تثبيت حزمة الحماية لــ الباخصه</div>
      
      
-      <script src="Far.js"></script>
+      <script src="function.js" type="text/javascript"></script>
 </body>
 </html>
