--- a/card/card.html
+++ b/card/card.html
@@ -30,9 +30,9 @@
         <div class="card">
           <img src="Turbo.jpeg" alt="TuRbo" style="width: 100%;" />
           <div class="container">
-            <h2>TuRbo</h2>
-            <p class="title">Founder</p>
-            <p>Hi I'm | Turbo | Devloper , Desinger</p>
+            <h2>سبردل</h2>
+            <p class="title">المنصب</p>
+            <p>التكيتك , رامي القنابل</p>
             <p class="snapchat-t">
               <a
                 href="https://www.snapchat.com/add/ji.ijk"
@@ -40,7 +40,7 @@
               ></a>
             </p>
 
-            <p><button class="button">Contact</button></p>
+            <p><button class="button">التواصل </button></p>
           </div>
         </div>
       </div>
@@ -49,11 +49,11 @@
         <div class="card">
           <img src="#" alt="SooN" style="width: 100%;" />
           <div class="container">
-            <h2>SooN</h2>
-            <p class="title">Developer new</p>
-            <p>Hi I'm | *** | Devloper New (:</p>
+            <h2>سبردل</h2>
+            <p class="title">المنصب</p>
+            <p>تكتيك , المساعده في البشات , الفزعات</p>
             <p>None</p>
-            <p><button class="button">Contact</button></p>
+            <p><button class="button">التواصل </button></p>
           </div>
         </div>
       </div>
@@ -62,11 +62,11 @@
         <div class="card">
           <img src="#" alt="SooN" style="width: 100%;" />
           <div class="container">
-            <h2>SooN</h2>
-            <p class="title">Developer new</p>
-            <p>Hi I'm | *** | Devloper New (:</p>
+            <h2>Rwa</h2>
+            <p class="title">المنصب</p>
+            <p>ايم , بش , رامي القنابل</p>
             <p>None</p>
-            <p><button class="button">Contact</button></p>
+            <p><button class="button">التواصل </button></p>
           </div>
         </div>
       </div>
