--- a/404/index.html
+++ b/404/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>مرحبا بكم في موقع تيم ال سبردل</title>
+    <title>الصفحه غير متوفرهس</title>
 </head>
 <body>
     <div class="noise"></div>
