--- a/card/card.html
+++ b/card/card.html
@@ -22,7 +22,7 @@
       <p class="Instagram-team">
         <a href=""> <li class="fa fa-instagram"></li></a>
       </p>
-      <p class="back"><a href="/index.html" class="fa fa-home"></a></p>
+      <p class="back"><a href="./index.html" class="fa fa-home"></a></p>
     </div>
 
     <div class="row">
