--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       href="https://fonts.googleapis.com/css2?family=Scheherazade:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>THZ</title>
+    <title>آل سبردل</title>
   </head>
   <!-- Body -->
 
-  <body dir="rtl">
+  <body dir="rtl">ٍٍ
     <div class="header">
       <img class="logo" src="img/thz1.png" alt="THZ" />
-      <p>Happy New Years </p>
+      <p>مرحبا بكم في تيم آل سبردل</p>
     </div>
     <div class="icon-bar">
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
@@ -61,8 +61,7 @@
         ></iframe>
 
         <p id="text">
-         " For all   ♥️  " 
-           H A p p y - N e W - Y e A R 
+         " نقبل بتحدي اي فريق "
         </p>
        
       </div>
@@ -70,7 +69,7 @@
     <!--Footer -->
     <footer>
       <div class="footer">
-        <p> Devloper | Error404 </p>
+        <p> Devloper | SkoLr77 </p>
       </div>
     </footer>
     <!--end / footer-->
