Update For card in Rwa

--- a/card/card.html
+++ b/card/card.html
@@ -60,7 +60,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="#" alt="SooN" style="width: 100%;" />
+          <img src="3467EB0D-ADAA-47F4-9F00-5435AB156EA1.jpeg" alt="Rwa" style="width: 100%;" />
           <div class="container">
             <h2>Rwa</h2>
             <p class="title">المنصب</p>
