--- a/card/card.html
+++ b/card/card.html
@@ -17,12 +17,12 @@
   <body>
     <div class="about-section">
       <h1>About Team</h1>
-      <p>Devloper app for { ios,Android } Soon</p>
+      <p>Soon </p>
       <p class="text-team">حساب الفريق على الانستغرام</p>
       <p class="Instagram-team">
         <a href=""> <li class="fa fa-instagram"></li></a>
       </p>
-      <p class="back"><a href="./index.html" class="fa fa-home"></a></p>
+      <p class="back"><a href="../index.html" class="fa fa-home"></a></p>
     </div>
 
     <div class="row">
@@ -30,12 +30,12 @@
         <div class="card">
           <img src="Turbo.jpeg" alt="TuRbo" style="width: 100%;" />
           <div class="container">
-            <h2>سبردل</h2>
+            <h2> A Z. </h2>
             <p class="title">المنصب</p>
             <p>التكيتك , رامي القنابل</p>
             <p class="snapchat-t">
               <a
-                href="https://www.snapchat.com/add/ji.ijk"
+                href="https://www.snapchat.com/add/i-3z77"
                 class="fa fa-snapchat"
               ></a>
             </p>
@@ -47,9 +47,9 @@
 
       <div class="column">
         <div class="card">
-          <img src="#" alt="SooN" style="width: 100%;" />
+          <img src="Na9er.jpg" alt="SooN" style="width: 100%;" />
           <div class="container">
-            <h2>سبردل</h2>
+            <h2> سبردل </h2>
             <p class="title">المنصب</p>
             <p>تكتيك , المساعده في البشات , الفزعات</p>
             <p>None</p>
@@ -60,11 +60,11 @@
 
       <div class="column">
         <div class="card">
-          <img src="3467EB0D-ADAA-47F4-9F00-5435AB156EA1.jpeg" alt="Rwa" style="width: 100%;" />
+          <img src="Rwa.jpeg" alt="Rwa" style="width: 100%;" />
           <div class="container">
-            <h2>Rwa</h2>
+            <h2> R W A . </h2>
             <p class="title">المنصب</p>
-            <p>ايم , بش , رامي القنابل</p>
+            <p> الاداره ,ايم , بش , رامي القنابل</p>
             <p>None</p>
             <p><button class="button">التواصل </button></p>
           </div>
