--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         ></iframe>
 
         <p id="text">
-         " نقبل بتحدي اي فريق "
+         " KINGS FOR PUBG MOBILE   "
         </p>
        
       </div>
@@ -69,7 +69,7 @@
     <!--Footer -->
     <footer>
       <div class="footer">
-        <p> Devloper | SkoLr77 </p>
+        <p> By  : SkoLr77 </p>
       </div>
     </footer>
     <!--end / footer-->
