--- a/card/card.html
+++ b/card/card.html
@@ -71,5 +71,19 @@
         </div>
       </div>
     </div>
+
+    <div class="column">
+      <div class="card">
+        <img src="Rwa.jpeg" alt="Rwa" style="width: 100%;" />
+        <div class="container">
+          <h2> عسير </h2>
+          <p class="title">المنصب</p>
+          <p>ايم , بش , رامي القنابل</p>
+          <p>None</p>
+          <p><button class="button">التواصل </button></p>
+        </div>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
