--- a/card/card.html
+++ b/card/card.html
@@ -74,7 +74,7 @@
 
     <div class="column">
       <div class="card">
-        <img src="Rwa.jpeg" alt="Rwa" style="width: 100%;" />
+        <img src="Aseer.jpg" alt="عسير" style="width: 100%;" />
         <div class="container">
           <h2> عسير </h2>
           <p class="title">المنصب</p>
