Update Name  NAR

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       href="https://fonts.googleapis.com/css2?family=Scheherazade:wght@700&display=swap"
       rel="stylesheet"
     />
-    <title>آل سبردل</title>
+    <title> Welcome To Team | NAR | </title>
   </head>
   <!-- Body -->
 
   <body dir="rtl">ٍٍ
     <div class="header">
       <img class="logo" src="img/thz1.png" alt="THZ" />
-      <p>مرحبا بكم في تيم آل سبردل</p>
+      <p>مرحبا بكم في تيم |NAR| </p>
     </div>
     <div class="icon-bar">
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
