add account Instagram

--- a/card/card.html
+++ b/card/card.html
@@ -20,7 +20,7 @@
       <p>Soon </p>
       <p class="text-team">حساب الفريق على الانستغرام</p>
       <p class="Instagram-team">
-        <a href=""> <li class="fa fa-instagram"></li></a>
+        <a href="https://www.instagram.com/nar_pu0a/"> <li class="fa fa-instagram"></li></a>
       </p>
       <p class="back"><a href="../index.html" class="fa fa-home"></a></p>
     </div>
