--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width; initial-scale=0.43; maximum-scale=1.5;"
     />
-    <link rel="logo-thz" href="img/thz1.png" />
+    <link rel="logo-thz" href="img/nar1.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap"
       rel="stylesheet"
@@ -40,7 +40,7 @@
 
   <body dir="rtl">ٍٍ
     <div class="header">
-      <img class="logo" src="img/thz1.png" alt="THZ" />
+      <img class="logo" src="img/nar1.png" alt="THZ" />
       <p>مرحبا بكم في تيم | NAR | </p>
     </div>
     <div class="icon-bar">
