update full system

--- a/card/card.html
+++ b/card/card.html
@@ -12,15 +12,15 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <title>THZ</title>
+    <title> NaR </title>
   </head>
   <body>
     <div class="about-section">
-      <h1>About Team</h1>
-      <p>Soon </p>
-      <p class="text-team">حساب الفريق على الانستغرام</p>
+      <h1> About Team </h1>
+      <p> Soon </p>
+      <p class="text-team"> حساب الفريق على الانستغرام </p>
       <p class="Instagram-team">
-        <a href="https://www.instagram.com/nar_pu0a/">  <i class="fa-instagram"></i></a>
+        <a href="https://www.instagram.com/nar_pu0a/"> <i class="fa fa-instagram" aria-hidden="true"></i></a>
       </p>
       <p class="back"><a href="../index.html" class="fa fa-home"></a></p>
     </div>
@@ -35,7 +35,7 @@
             <p>التكيتك , رامي القنابل</p>
             <p class="snapchat-t">
               <a
-                href="https://www.snapchat.com/add/i-3z77"
+                href=""
                 class="fa fa-snapchat"
               ></a>
             </p>
