--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="icon-bar">
       <a class="active" href="index.html"><i class="fa fa-home"></i></a>
       <a href="card/card.html"><i class="fa fa-users"></i></a>
-      <a href="search/search.html"><i class="fa fa-search"></i></a>
+      <a href="video/index.html"><i class="fa fa-play-circle"></i></a>
       <a href="shield/index.html"><i class="fa fa-shield"></i></a>
     </div>
 
@@ -56,21 +56,25 @@
         <iframe
           width="0"
           height="0"
-          src="https://www.youtube.com/embed/1Z52-lIZMbQ?modestbranding=1&autoplay=1&controls=0&fs=0&iv_load_policy=3&loop=1&rel=0&showinfo=0&autohide=0&disablekb=1"
+          src=""
           frameborder="0"
         ></iframe>
 
         <p id="text">
-         " KINGS FOR PUBG MOBILE   "
+         " KINGS FOR PUBG MOBILE  "
         </p>
+
+       
        
       </div>
     </div>
     <!--Footer -->
     <footer>
       <div class="footer">
-        <p> By  : SkoLr77 </p>
-      </div>
+        <div class="logo-footer">
+          <img src="img/bySkoLr77.png">
+        </div>
+    </div>
     </footer>
     <!--end / footer-->
     <script type="text/javascript" src="js/script.js"></script>
