--- a/card/card.html
+++ b/card/card.html
@@ -65,7 +65,7 @@
             <h2> R W A . </h2>
             <p class="title">المنصب</p>
             <p> الاداره ,ايم , بش , رامي القنابل</p>
-            <p>None</p>
+            <p> DeveLoper in Html only</p>
             <p><button class="button">التواصل </button></p>
           </div>
         </div>
