--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         ></iframe>
 
         <p id="text">
-         " KINGS FOR PUBG MOBILE  "
+         " KINGS OF PUBG MOBILE  "
         </p>
 
        
