--- a/card/card.html
+++ b/card/card.html
@@ -52,7 +52,9 @@
             <h2> سبردل </h2>
             <p class="title">المنصب</p>
             <p>تكتيك , المساعده في البشات , الفزعات</p>
-            <p>None</p>
+            <div class="pubg1">
+                 <img src="../ticket/pubg1.png"/>
+            </div>
             <p><button class="button">التواصل </button></p>
           </div>
         </div>
