--- a/card/card.html
+++ b/card/card.html
@@ -33,12 +33,9 @@
             <h2> A Z. </h2>
             <p class="title">المنصب</p>
             <p>التكيتك , رامي القنابل</p>
-            <p class="snapchat-t">
-              <a
-                href=""
-                class="fa fa-snapchat"
-              ></a>
-            </p>
+            <div class="pubg-logo">
+              <img src="../ticket/pubg.png" alt="pubg-logo">
+            </div>
 
             <p><button class="button">التواصل </button></p>
           </div>
@@ -52,9 +49,9 @@
             <h2> سبردل </h2>
             <p class="title">المنصب</p>
             <p>تكتيك , المساعده في البشات , الفزعات</p>
-            <div class="pubg1">
-                 <img src="../ticket/pubg1.png"/>
-            </div>
+             <div class="pubg-logo">
+               <img src="../ticket/pubg.png" alt="pubg-logo">
+             </div>
             <p><button class="button">التواصل </button></p>
           </div>
         </div>
@@ -67,7 +64,9 @@
             <h2> R W A . </h2>
             <p class="title">المنصب</p>
             <p> الاداره ,ايم , بش , رامي القنابل</p>
-            <p> DeveLoper in Html only</p>
+            <div class="pubg-logo">
+              <img src="../ticket/pubg.png" alt="pubg-logo">
+            </div>
             <p><button class="button">التواصل </button></p>
           </div>
         </div>
@@ -81,7 +80,9 @@
           <h2> عسير </h2>
           <p class="title">المنصب</p>
           <p>ايم , بش , رامي القنابل</p>
-          <p>None</p>
+          <div class="pubg-logo">
+            <img src="../ticket/pubg.png" alt="pubg-logo">
+          </div>
           <p><button class="button">التواصل </button></p>
         </div>
       </div>
