--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <!-- Body -->
 
-  <body dir="rtl">ٍٍ
+  <body dir="rtl">
     <div class="header">
       <img class="logo" src="img/nar1.png" alt="THZ" />
       <p>مرحبا بكم في تيم | NAR | </p>
