--- a/card/card.html
+++ b/card/card.html
@@ -44,7 +44,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="Na9er.jpg" alt="SooN" style="width: 100%;" />
+          <img src="nr.png" alt="SooN" style="width: 100%;" />
           <div class="container">
             <h2> سبردل </h2>
             <p class="title">المنصب</p>
@@ -88,5 +88,53 @@
       </div>
     </div>
   </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="rh.png" alt="RH" style="width: 100%;" />
+      <div class="container">
+        <h2> RASHID </h2>
+        <p class="title">المنصب</p>
+        <p> لم يتم التقيم </p>
+        <div class="pubg-logo">
+          <img src="../ticket/pubg.png" alt="pubg-logo">
+        </div>
+        <p><button class="button">التواصل </button></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="column">
+  <div class="card">
+    <img src="JooJ.png" alt="jooj" style="width: 100%;" />
+    <div class="container">
+      <h2> JooJ </h2>
+      <p class="title">المنصب</p>
+      <p> لم يتم التقيم </p>
+      <div class="pubg-logo">
+        <img src="../ticket/pubg.png" alt="pubg-logo">
+      </div>
+      <p><button class="button">التواصل </button></p>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="column">
+  <div class="card">
+    <img src="el.png" alt="el" style="width: 100%;" />
+    <div class="container">
+      <h2> EL </h2>
+      <p class="title">المنصب</p>
+      <p> لم يتم التقيم </p>
+      <div class="pubg-logo">
+        <img src="../ticket/pubg.png" alt="pubg-logo">
+      </div>
+      <p><button class="button">التواصل </button></p>
+    </div>
+  </div>
+</div>
+</div>
   </body>
 </html>
