--- a/card/card.html
+++ b/card/card.html
@@ -44,7 +44,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="nr.png" alt="SooN" style="width: 100%;" />
+          <img src="NR.png" alt="SooN" style="width: 100%;" />
           <div class="container">
             <h2> سبردل </h2>
             <p class="title">المنصب</p>
@@ -59,7 +59,7 @@
 
       <div class="column">
         <div class="card">
-          <img src="Rwa.jpeg" alt="Rwa" style="width: 100%;" />
+          <img src="RWA.png" alt="Rwa" style="width: 100%;" />
           <div class="container">
             <h2> R W A . </h2>
             <p class="title">المنصب</p>
@@ -91,7 +91,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="rh.png" alt="RH" style="width: 100%;" />
+      <img src="RH.png" alt="RH" style="width: 100%;" />
       <div class="container">
         <h2> RASHID </h2>
         <p class="title">المنصب</p>
@@ -105,37 +105,7 @@
   </div>
 </div>
 
-<div class="column">
-  <div class="card">
-    <img src="JooJ.png" alt="jooj" style="width: 100%;" />
-    <div class="container">
-      <h2> JooJ </h2>
-      <p class="title">المنصب</p>
-      <p> لم يتم التقيم </p>
-      <div class="pubg-logo">
-        <img src="../ticket/pubg.png" alt="pubg-logo">
-      </div>
-      <p><button class="button">التواصل </button></p>
-    </div>
-  </div>
-</div>
-</div>
 
-<div class="column">
-  <div class="card">
-    <img src="el.png" alt="el" style="width: 100%;" />
-    <div class="container">
-      <h2> EL </h2>
-      <p class="title">المنصب</p>
-      <p> لم يتم التقيم </p>
-      <div class="pubg-logo">
-        <img src="../ticket/pubg.png" alt="pubg-logo">
-      </div>
-      <p><button class="button">التواصل </button></p>
-    </div>
-  </div>
-</div>
-</div>
 
   </body>
 </html>
