--- a/card/card.html
+++ b/card/card.html
@@ -48,7 +48,7 @@
           <div class="container">
             <h2> سبردل </h2>
             <p class="title">المنصب</p>
-            <p>تكتيك , المساعده في البشات , الفزعات</p>
+            <p> الاداره , البشات , رامي القنابل , التكيتك</p>
              <div class="pubg-logo">
                <img src="../ticket/pubg.png" alt="pubg-logo">
              </div>
@@ -104,8 +104,6 @@
     </div>
   </div>
 </div>
-
-
 
   </body>
 </html>
